--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Realla</string>
     <string name="underlineLogIn"><u>Log In</u></string>
     <string name="underlineSignUp"><u>Sign Up</u></string>
+    <string name="sensitiveTitle"><u>Sensitive Account Information</u></string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
