Members added to the board can be added or removed from individual cards and they will be posted on on the card list view.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="underlineLogIn"><u>Log In</u></string>
     <string name="underlineSignUp"><u>Sign Up</u></string>
     <string name="sensitiveTitle"><u>Sensitive Account Information</u></string>
+    <string name="memberNames"><b>Member Names:</b></string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
